  is enabled and this parameter is "false" or missing, curn will do what
  it's always done, namely, send a single email message containing all
  output.

- Within a given plug-in phase, all plug-ins implementing that phase now
  execute in sorted order. That is, they're sorted per-phase by their
  declared sort keys, and they executed in that order.


				  -------
				  Changes
				  -------

- Modified the per-feed "SaveAs" configuration parameter to use a command
  line-style argument. The output encoding is now specified with a
  "--encoding" option to the parameter's value. The parameter also supports
  a new "--backup" option that can be used to save previously downloaded
  raw feed data.

  See the "SaveAs" parameter in the User's Guide for details.

- Deprecated the per-feed "SaveOnly" configuration parmeater, in favor of
  the new "--encoding" option to "SaveAs". "SaveOnly" will still be
  honored, but its usage will generate a warning.

- Updated bundled freemarker.jar from version 2.3.6 to version 2.3.10.
  See http://freemarker.org/

- Updated bundled rome.jar from version 0.8 to version 0.9.
  See https://rome.dev.java.net/

- Moved FreeMarker transformation logic to new FreeMarkerFeedTransformer
  class, and modified FreeMarkerOutputHandler to use that class. The
  new transformer class can now be used by plug-ins.

- Removed an optimization: Previously, if there were no configured output
  handlers, curn would download the feed each feed only if "SaveAs" were
  specified for the feed. Further, since there were no output handlers,
  curn would not bother parsing the feed. With the introduction of
  plug-ins, however, that behavior is broken. A plug-in that relies on
  parsed data (such as the SaveAsRSS plug-in) should still work even if
  there are no output handlers. So, curn now parses the downloaded RSS
  feeds even if there are no output handlers configured.

- Removed support for Informa RSS parser. ROME is better maintained and